--- a/src/input.css
+++ b/src/input.css
@@ -3,4 +3,6 @@
 @theme {
   --font-sans: "Noto Sans", sans-serif;
   --font-mincho: "Shippori Mincho", serif;
+  --color-background: #eeeeee;
+  --color-basecolor: #515266;
 }
